--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,12 +1,39 @@
 <web-app>
 
-<servlet>
-    <servlet-name>login</servlet-name>
-    <servlet-class>Login</servlet-class>
-</servlet>
-<servlet-mapping>
-    <servlet-name>login</servlet-name>
-    <url-pattern>/login</url-pattern>
-</servlet-mapping>
+    <servlet>
+        <servlet-name>addbook</servlet-name>
+        <servlet-class>addbook</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>addbook</servlet-name>
+        <url-pattern>/addbook</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>viewbook</servlet-name>
+        <servlet-class>viewbook</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>viewbook</servlet-name>
+        <url-pattern>/viewbook</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>deletebook</servlet-name>
+        <servlet-class>deletebook</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>deletebook</servlet-name>
+        <url-pattern>/deletebook</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>updatebook</servlet-name>
+        <servlet-class>updatebook</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>updatebook</servlet-name>
+        <url-pattern>/updatebook</url-pattern>
+    </servlet-mapping>
 
 </web-app>
